--- a/assets/css/NavForms.css
+++ b/assets/css/NavForms.css
@@ -105,7 +105,7 @@
 	background-color:#2B5860;
 }*/
 /**************************************** tables ***********************************************/
-/*.table1
+.table1
 {
 	width:100%;
 	text-align:center;
@@ -134,7 +134,7 @@
 	border:1px solid;
 	border-color:#666666;
 	padding: 10px;
-}*/
+}
 
 
 /**********************************************************************************************/
