--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,74 @@ body
 	height:100%;
 	width:100%;
 }
+.content_area
+{
+	margin-top:50px;
+	margin-left:20px;
+	margin-right:20px;
+	height:100%;
+	/*background-color:blue;*/
+	vertical-align:top;
+}
+.Content_forms
+{
+	padding-top:10px;
+	padding-left:30px;
+	padding-bottom:0;
+	height:auto;
+	font-family:sans-serif;
+	font-weight:bold;
+	font-size:12px;
+}
 .save_btn{
 	width: 130px;
+}
+
+.scrollable-area {
+    height: 200px; /* Set a fixed height */
+    border: 1px solid #ccc;
+    overflow-y: auto; /* Adds vertical scrollbar if content overflows */
+    /* or simply use: overflow: auto; */
+    padding: 10px;
+}
+
+
+/**************************************** tables ***********************************************/
+.table1
+{
+	min-width: 100%;
+	/*width:100%;*/
+	/*text-align:center;*/
+	font-family:"Courier New";
+	white-space: nowrap;
+}
+
+.table-wrapper {
+    width: 100%;
+    overflow-x: auto;
+}
+
+.table1 tr
+{
+	padding:10px;
+}
+.table1 tr th
+{
+	color:#FFF;
+	background-color:#666666;
+	font-weight:bold;
+	padding: 10px;
+	margin:0px;
+	border-left:1px solid;
+	border-right:1px solid;
+	border-color:#FFF;
+	border-radius:10px 10px 0 0;
+}
+.table1 tr td
+{
+	color:#000;
+	border:1px solid;
+	border-color:#666666;
+	padding: 10px;
 }
 
